Fix paragraph spacing on industry articles

--- a/core/static/core/sass/components/_articles-container.scss
+++ b/core/static/core/sass/components/_articles-container.scss
@@ -27,6 +27,9 @@ $gray-light: #e8e8e8;
   img {
     height: 320px;
   }
+  p {
+    margin-bottom: 1em
+  }
   .article-meta {
     font-size: 15px;
     line-height: 1.47;
